Fixed overflow error.

--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -45,15 +45,15 @@ body {
 }
 
 .col-25 {
-	width: 25%;
+	width: 24%;
 }
 
 .col-50 {
-	width: 50%;
+	width: 49%;
 }
 
 .col-75 {
-	width: 75%;
+	width: 74%;
 }
 
 /*
